[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/GDSerCommDock/MenuLogic.gd" type="Script" id=1]
[ext_resource path="res://addons/GDSerCommDock/Com.gd" type="Script" id=2]
[ext_resource path="res://addons/GDSerCommDock/Stylebox.tres" type="StyleBox" id=3]
[ext_resource path="res://Assets/Icons/duplicate_layer.png" type="Texture" id=4]
[ext_resource path="res://UI/Components/FlatTextureButton.gd" type="Script" id=5]

[node name="SerialCommunication" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
window_title = "Send to Printer"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Com" type="Node" parent="."]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1910.0
margin_bottom = 1070.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 948.0
margin_bottom = 1060.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SendVBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 948.0
margin_bottom = 52.0

[node name="LineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer/SendVBoxContainer"]
margin_right = 948.0
margin_bottom = 24.0
placeholder_text = "Command to send..."
caret_blink = true
caret_blink_speed = 0.5

[node name="SendHBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/SendVBoxContainer"]
margin_top = 28.0
margin_right = 948.0
margin_bottom = 52.0

[node name="SendButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/SendVBoxContainer/SendHBoxContainer"]
margin_right = 43.0
margin_bottom = 24.0
text = "Send"

[node name="EndlineCheckBox" type="CheckBox" parent="MarginContainer/HBoxContainer/VBoxContainer/SendVBoxContainer/SendHBoxContainer"]
margin_left = 47.0
margin_right = 138.0
margin_bottom = 24.0
pressed = true
text = "w/endline"

[node name="PortHBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 948.0
margin_bottom = 76.0

[node name="PortOptionButton" type="OptionButton" parent="MarginContainer/HBoxContainer/VBoxContainer/PortHBoxContainer"]
margin_right = 55.0
margin_bottom = 20.0
text = "Port"
items = [ "Port", null, false, 0, null, "NO DEVICES DETECTED", null, false, 1, null ]
selected = 0

[node name="BaudRateOptionButton" type="OptionButton" parent="MarginContainer/HBoxContainer/VBoxContainer/PortHBoxContainer"]
margin_left = 59.0
margin_right = 145.0
margin_bottom = 20.0
text = "Baudrate"
items = [ "Baudrate", null, false, 0, null, "300", null, false, 1, null, "600", null, false, 2, null, "1200", null, false, 3, null, "2400", null, false, 4, null, "4800", null, false, 5, null, "9600", null, false, 6, null, "14400", null, false, 7, null, "19200", null, false, 8, null, "28800", null, false, 9, null, "38400", null, false, 10, null, "57600", null, false, 11, null, "115200", null, false, 12, null ]
selected = 0

[node name="RefreshButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/PortHBoxContainer"]
margin_left = 149.0
margin_right = 209.0
margin_bottom = 20.0
text = "Refresh"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 948.0
margin_bottom = 104.0

[node name="ClearButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 44.0
margin_bottom = 24.0
text = "Clear"

[node name="DisconnectButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 132.0
margin_bottom = 24.0
text = "Disconnect"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 136.0
margin_right = 233.0
margin_bottom = 24.0
pressed = true
text = "Auto scroll"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 948.0
margin_bottom = 112.0

[node name="SerialReadRichTextLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 948.0
margin_bottom = 1060.0
size_flags_vertical = 3
custom_styles/normal = ExtResource( 3 )
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 952.0
margin_right = 1900.0
margin_bottom = 1060.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_right = 948.0
margin_bottom = 44.0

[node name="GenerateGCode" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_right = 948.0
margin_bottom = 20.0
text = "Generate G-code"

[node name="SendTextEdit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_top = 24.0
margin_right = 948.0
margin_bottom = 44.0
text = "Send Below"

[node name="TextEdit" type="TextEdit" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 48.0
margin_right = 948.0
margin_bottom = 1060.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "
Click \"Generate G-code\" then \"Send Below\" to print current project."
highlight_current_line = true
show_line_numbers = true
draw_tabs = true
breakpoint_gutter = true
fold_gutter = true
smooth_scrolling = true
wrap_enabled = true

[node name="CopyText" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer2/TextEdit"]
modulate = Color( 1, 1, 1, 0.654902 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -23.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = 18.0
hint_tooltip = "Copy Text"
texture_normal = ExtResource( 4 )
stretch_mode = 5
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
hover_tint = Color( 0.592157, 1, 0.960784, 1 )
pressed_tint = Color( 0, 1, 0.858824, 1 )

[connection signal="gui_input" from="MarginContainer/HBoxContainer/VBoxContainer/SendVBoxContainer/LineEdit" to="." method="_on_LineEdit_gui_input"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/SendVBoxContainer/SendHBoxContainer/SendButton" to="." method="_on_SendButton_pressed"]
[connection signal="item_selected" from="MarginContainer/HBoxContainer/VBoxContainer/PortHBoxContainer/PortOptionButton" to="." method="_on_PortOptionButton_item_selected"]
[connection signal="item_selected" from="MarginContainer/HBoxContainer/VBoxContainer/PortHBoxContainer/BaudRateOptionButton" to="." method="_on_BaudRateOptionButton_item_selected"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/PortHBoxContainer/RefreshButton" to="." method="_on_RefreshButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/DisconnectButton" to="." method="_on_DisconnectButton_pressed"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/GenerateGCode" to="." method="_on_GenerateGCode_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/SendTextEdit" to="." method="_on_SendTextEdit_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/TextEdit/CopyText" to="." method="_on_CopyText_pressed"]
